[gd_scene load_steps=5 format=3 uid="uid://bjv1vlrs704cj"]

[ext_resource type="Script" uid="uid://da7k6ov7mae7u" path="res://scripts/ui/hud.gd" id="1_hqnrr"]
[ext_resource type="Script" uid="uid://8krug0mq1f1f" path="res://scripts/components/ui/hover_button.gd" id="2_hqnrr"]
[ext_resource type="Texture2D" uid="uid://dgcjhve3m6a2d" path="res://assets/sprites/tilesheets/tileset.png" id="3_bo48s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8qguk"]
atlas = ExtResource("3_bo48s")
region = Rect2(16, 64, 16, 16)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hqnrr")

[node name="BottomRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="BottomRight"]
layout_mode = 2

[node name="StartButton" type="Button" parent="BottomRight/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "START"
script = ExtResource("2_hqnrr")
metadata/_custom_type_script = "uid://8krug0mq1f1f"

[node name="ClearButton" type="Button" parent="BottomRight/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "CLEAR"
script = ExtResource("2_hqnrr")
metadata/_custom_type_script = "uid://8krug0mq1f1f"

[node name="FastForwardButton" type="Button" parent="BottomRight/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = ">>"
script = ExtResource("2_hqnrr")
metadata/_custom_type_script = "uid://8krug0mq1f1f"

[node name="TopRight" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_bottom = 20.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TopRight"]
layout_mode = 2
alignment = 2

[node name="counter" type="Label" parent="TopRight/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "200 fuel"

[node name="station" type="Label" parent="TopRight/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "0 / 0"

[node name="Control" type="Control" parent="TopRight/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Lever Button" type="Button" parent="TopRight/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
icon = SubResource("AtlasTexture_8qguk")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_hqnrr")
metadata/_custom_type_script = "uid://8krug0mq1f1f"

[node name="BottomLeft" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_right = 20.0
grow_vertical = 0

[node name="Explaination" type="Label" parent="BottomLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Left-click to add
Right-click to delete"

[connection signal="pressed" from="BottomRight/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BottomRight/VBoxContainer/ClearButton" to="." method="_on_start_button_pressed"]
